--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-streamlit>=1.22.0
-pandas>=1.4.0
-requests>=2.26.0
-openpyxl>=3.0.9 
+streamlit==1.22.0
+requests==2.28.2
+pandas==1.3.3
+openpyxl==3.0.9
+python-dotenv==1.0.0
+openai==0.27.0
